# ai-web-explorer

./: .gitignore  README.md  pyproject.toml
data/: test_state.json
data/actions_htmls/: 259e52d4-9c2b-499c-b619-00bd9a6b4e89_before.html  2e9e7cef-044d-4b9f-9a00-a989e065be2b_before.html  32ca73e5-c7a5-4346-983f-aba0b7072179_after.html  41421db7-6539-46b4-a68b-1e38331dc17c_after.html  44ce14b2-424d-4f9a-8b60-4058288f29ea_after.html  6eed33e3-13ff-438a-95ba-b0b620ed671e_before.html  95c2cdfb-b9bc-4990-9d9a-1dd39e1273d3_after.html  99355d92-f62b-498d-80eb-5e95d9569b1c_before.html  ae038e72-6b81-4a08-a281-a126901761c2_before.html  c4af2cb1-2cae-4878-8cc0-460c6b0aa9ad_before.html  c6fc7ec9-4380-49b7-bf1a-d01c0b80194e_after.html  e68b5149-2256-47c0-a6f8-53c856400acb_after.html  e6f35fa2-0619-46ae-87f6-4e9e59dcbf14_after.html  ee618211-61d2-45b3-9912-39be08a8fafc_before.html  f10a5673-382e-4ec1-a1e7-fe967adef9bf_before.html  fbd82230-c03e-45f3-82e3-5b34b610f758_before.html
resources/: mlendpoints.yaml  prompts.yaml  prompts_test.yaml
src/ai_web_explorer/: __init__.py  config.py  cookies.py  describer.py  executor.py  ft.py  html.py  loop.py  promptrepo.py  title.py  webstate.py
tests/: evaluation.py
tests/ai/: base.py  test_action_success.py  test_description.py  test_is_loading.py  test_title.py  test_title_image.py
tests/data/actions/: actions.txt
tests/data/actions/htmls/: 259e52d4-9c2b-499c-b619-00bd9a6b4e89_after.html  260a45d6-0699-4f3a-bd3b-aba8ac35350a_after.html  260a45d6-0699-4f3a-bd3b-aba8ac35350a_before.html  2b22e2d7-7675-4613-9f65-1c3177ab2526_after.html  44ce14b2-424d-4f9a-8b60-4058288f29ea_before.html  4f08207d-a889-4ad6-b37e-340c4f238c7d_after.html  4f08207d-a889-4ad6-b37e-340c4f238c7d_before.html  5518f8be-0395-4366-8617-fef5b4816658_after.html  58458515-01c5-4fd6-ab6f-c2993a190d05_after.html  6ece6976-4283-45ef-b887-1e773e25bb98_before.html  8ab735d8-00bc-455e-abce-41c828125fa4_before.html  c4af2cb1-2cae-4878-8cc0-460c6b0aa9ad_after.html  c6fc7ec9-4380-49b7-bf1a-d01c0b80194e_before.html  (+8 more)
tests/data/hackernews/: 1.html  10.html  12.html  13.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  titles_expected.txt
tests/data/title/: titles.csv
(+16 files in other folders)
